# maxo

./: .gitignore  .justfile  NOTICE  README.md  call_pather_renderer.py  pyproject.toml
.github/workflows/: analyze.yml  setup.yml
examples/: 1_echo_bot.py  2_keyboard.py  3_filters_and_middlewares.py  4_state.py  5_dialogs.py  7_html_markdown.py  8_facades.py
src/maxo/: backoff.py  loggers.py  omit.py
src/maxo/bot/: api_client.py  bot.py  state.py  warming_up.py
src/maxo/bot/methods/: __init__.py  base.py  markers.py
src/maxo/bot/methods/bots/: edit_bot_info.py  get_my_info.py
src/maxo/bot/methods/chats/: add_members.py  delete_admin.py  delete_chat.py  edit_chat.py  get_admins.py  get_chat.py  get_chat_by_link.py  get_chats.py  get_members.py  get_membership.py  get_pinned_message.py  leave_chat.py  pin_message.py  remove_member.py  send_action.py  set_admins.py  unpin_message.py
src/maxo/bot/methods/messages/: answer_on_callback.py  delete_message.py  edit_message.py  get_message_by_id.py  get_messages.py  get_video_attachment_details.py  send_message.py
src/maxo/bot/middlewares/: status_patch.py
src/maxo/dialogs/: __init__.py  dialog.py  setup.py  utils.py  window.py
src/maxo/dialogs/context/: intent_middleware.py
src/maxo/dialogs/integrations/: __init__.py  magic_filter.py
src/maxo/dialogs/manager/: bg_manager.py  manager.py  message_manager.py  sub_manager.py  updater.py
src/maxo/dialogs/test_tools/: bot_client.py  keyboard.py  memory_storage.py  mock_message_manager.py
src/maxo/dialogs/tools/: __init__.py  dialog_filter.py  filter_object.py  preview.py  transitions.py  web_preview.py
src/maxo/dialogs/widgets/: utils.py  widget_event.py
src/maxo/enums/: __init__.py  attachment_request_type.py  attachment_type.py  button_type.py  chat_admin_permission.py  chat_status.py  chat_type.py  intent.py  keyboard_button_type.py  markup_element_type.py  message_link_type.py  reply_button_type.py  sender_action.py  text_format.py  update_type.py  upload_type.py
src/maxo/errors/: api.py
src/maxo/fsm/: __init__.py  filter.py  middleware.py  state.py
src/maxo/fsm/storages/: base.py  memory.py  redis.py
src/maxo/integrations/: dishka.py
src/maxo/routing/: dispatcher.py
src/maxo/routing/filters/: base.py  command.py  exception.py  payload.py  state.py
src/maxo/routing/handlers/: signal.py  update.py
src/maxo/routing/interfaces/: __init__.py  middleware.py
src/maxo/routing/middlewares/: error.py  fsm_context.py  manager.py  update_context.py
src/maxo/routing/observers/: base.py
src/maxo/routing/routers/: simple.py
src/maxo/routing/signals/: __init__.py  exception.py  update.py
src/maxo/routing/updates/: __init__.py  base.py  bot_added_to_chat.py  bot_removed_from_chat.py  bot_started.py  bot_stopped.py  chat_title_changed.py  dialog_cleared.py  dialog_muted.py  dialog_removed.py  dialog_unmuted.py  error.py  message_callback.py  message_chat_created.py  message_created.py  message_edited.py  message_removed.py  updates.py  user_added_to_chat.py  user_removed_from_chat.py
src/maxo/routing/utils/: _resolving_inner_middlewares.py
src/maxo/tools/: dispatcher.py
src/maxo/tools/facades/: middleware.py
src/maxo/types/: __init__.py  attachment.py  attachment_payload.py  attachment_request.py  attachments.py  audio_attachment.py  audio_attachment_request.py  base.py  bot_command.py  bot_info.py  button.py  buttons.py  callback.py  callback_answer.py  callback_button.py  chat.py  chat_admin.py  chat_admins_list.py  chat_button.py  chat_list.py  chat_member.py  chat_members_list.py  command_object.py  contact_attachment.py  contact_attachment_payload.py  contact_attachment_request.py  contact_attachment_request_payload.py  data_attachment.py  emphasized_markup.py  file_attachment.py  file_attachment_payload.py  file_attachment_request.py  get_pinned_message_result.py  get_subscriptions_result.py  heading_markup.py  highlighted_markup.py  image.py  inline_keyboard_attachment.py  inline_keyboard_attachment_request.py  inline_keyboard_attachment_request_payload.py  (+62 more)
src/maxo/utils/: auth_widget.py  deeplink.py  link.py  long_polling.py  payload.py  text_decorations.py  webapp.py
src/maxo/utils/builders/: __init__.py  attachment_request.py  keyboard.py
src/maxo/utils/facades/: __init__.py  middleware.py
src/maxo/utils/helpers/: __init__.py  attachments.py  calculating.py
src/maxo/utils/iterators/: chat_members.py  chats.py
src/maxo/utils/long_polling/: __init__.py  long_polling.py
src/maxo/utils/upload_media/: __init__.py  base.py  buffered.py  file_system.py
src/maxo_dialog/: dialog.py  setup.py
src/maxo_dialog/api/entities/: context.py  events.py  link_preview.py  media.py  new_message.py  stack.py  update_event.py
src/maxo_dialog/api/internal/: fake_data.py  manager.py  widgets.py  window.py
src/maxo_dialog/api/protocols/: media.py  message_manager.py
src/maxo_dialog/context/: access_validator.py  intent_filter.py  intent_middleware.py  media_storage.py
src/maxo_dialog/manager/: bg_manager.py  manager.py  manager_factory.py  manager_middleware.py
src/maxo_dialog/widgets/input/: base.py
src/maxo_dialog/widgets/link_preview/: base.py
src/maxo_dialog/widgets/media/: static.py
tests/maxo/errors/: test_base.py
tests/maxo/routing/: test_middleware.py  test_payload.py
tests/maxo/utils/: test_text_decorations.py
tests/maxo_dialog/: test_click.py  test_create.py  test_dialog_state_validation.py  test_events.py  test_group.py  test_isolation.py  test_middleware.py  test_nested_transitions.py  test_transitions.py  test_utils.py
tests/maxo_dialog/widgets/: conftest.py
tests/maxo_dialog/widgets/kbd/: test_base.py  test_calendar.py  test_checkbox.py  test_column.py  test_counter.py  test_group.py  test_multiselect.py  test_radio.py  test_row.py  test_select.py  test_toggle.py  test_url.py
tests/maxo_dialog/widgets/media/: test_base.py  test_media_message.py  test_media_storage.py  test_scroll.py
tests/maxo_dialog/widgets/text/: test_base.py  test_case.py  test_format.py  test_jinja.py  test_multi.py
(+57 files in other folders)
