[build-system]
requires = ["uv_build==0.9.13"]
build-backend = "uv_build"

[project]
name = "maxo"
description = "Asynchronous framework for MAX.ru bots"
version = "0.2.1"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "K1rL3s - Kirill Lesovoy", email = "kirill.lesovoi@mail.ru" },
    { name = "Ivan Kirpichnikov" },
]
maintainers = [{ name = "K1rL3s - Kirill Lesovoy", email = "kirill.lesovoi@mail.ru" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "unihttp[aiohttp]>=0.2.4,<0.3.0",
    "anyio>=4.0.0,<5.0.0",
    "magic_filter>=1.0.0,<2.0.0",
    "cachetools>=4.0.0,<7.0.0",
    "jinja2>=3.0.0,<4.0.0",
    "adaptix>=3.0.0b11,<4.0.0",
    "typing-extensions>=4.12.0,<5.0.0"
]

[project.optional-dependencies]
dishka = ["dishka>=1.0.0,<2.0.0"]
redis = ["redis[hiredis]>=5.0.1,<8.0.0"]

[dependency-groups]
tests = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-repeat==0.9.4",
    "nox==2026.2.9",
    "nox-uv==0.7.1",
]
lint = [
    "mypy==1.19.0",
    "ruff==0.14.5",
    "codespell==2.4.1",
    "bandit==1.9.1",
    "slotscheck==0.19.1",
    "black==25.11.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "tests" },
    "maxo[dishka,redis]"
]

[project.urls]
Documentation = "https://maxo.rtfd.io"
Repository = "https://github.com/K1rL3s/maxo"

[tool.mypy]
files = ["src", "tests", "examples"]
strict = true
strict_bytes = true
local_partial_types = true
ignore_missing_imports = true
warn_unreachable = true
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
    "mutable-override",
    "unimported-reveal",
    "deprecated",
]

[tool.ruff]
src = ["src", "examples"]
fix = true
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "RUF001", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
    "RUF002", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-docstring/
    "RUF003", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment/
    "C901", # https://docs.astral.sh/ruff/rules/complex-structure/

    # todo pydocstyle
    "D100",
    "D101",
    "D102",
    "D103",
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic methods
    "D106", # missing docstring in public nested class
    "D107", # missing docstring in __init__
    "D212",
    "D203",

    "ARG001", # https://docs.astral.sh/ruff/rules/unused-function-argument/
    "ARG002", # https://docs.astral.sh/ruff/rules/unused-method-argument/
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "EM", # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    "FIX", # https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
    "TD001", # https://docs.astral.sh/ruff/rules/invalid-todo-tag/
    "TD002", # https://docs.astral.sh/ruff/rules/missing-todo-author/
    "TD003", # https://docs.astral.sh/ruff/rules/missing-todo-link/
    "FBT001", # https://docs.astral.sh/ruff/rules/boolean-type-hint-positional-argument/
    "FBT002", # https://docs.astral.sh/ruff/rules/boolean-default-value-positional-argument/
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "ASYNC109", # own timeout implementation
    "TC001", # https://docs.astral.sh/ruff/rules/typing-only-first-party-import/
    "TC006", # https://docs.astral.sh/ruff/rules/runtime-cast-value/
    "UP046", # https://docs.astral.sh/ruff/rules/non-pep695-generic-class/
    "UP047", # https://docs.astral.sh/ruff/rules/non-pep695-generic-function/
    "PLR0904", # https://docs.astral.sh/ruff/rules/too-many-public-methods/
    "PLR0911", # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912", # https://docs.astral.sh/ruff/rules/too-many-branches/
    "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "PLR0914", # https://docs.astral.sh/ruff/rules/too-many-locals/
    "PLR0915", # https://docs.astral.sh/ruff/rules/too-many-statements/
    "PLR0916", # https://docs.astral.sh/ruff/rules/too-many-boolean-expressions/
    "PLR0917", # https://docs.astral.sh/ruff/rules/too-many-positional-arguments/
    "PLR1702", # https://docs.astral.sh/ruff/rules/too-many-nested-blocks/
    "PLR6301", # https://docs.astral.sh/ruff/rules/no-self-use/
    "A001", # https://docs.astral.sh/ruff/rules/builtin-variable-shadowing/
    "A002", # https://docs.astral.sh/ruff/rules/builtin-argument-shadowing/
    "A003", # https://docs.astral.sh/ruff/rules/builtin-attribute-shadowing/
    "A006", # https://docs.astral.sh/ruff/rules/builtin-lambda-argument-shadowing/
    "N818", # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name/
    "B008", # https://docs.astral.sh/ruff/rules/function-call-in-default-argument/
    "S311", # https://docs.astral.sh/ruff/rules/suspicious-non-cryptographic-random-usage/#suspicious-non-cryptographic-random-usage-s311
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # assert
    "ANN", # type annotations
    "D", # docstrings
    "ASYNC", # async правила
    "E501", # длинные строки
    "PLR", # complexity
    "FBT003",
    "SLF001",
]
"src/maxo/types/*.py" = ["E501", "D"]
"src/maxo/enums/*.py" = ["E501", "D"]
"src/maxo/bot/updates/*.py" = ["E501", "D"]
"src/maxo/bot/methods/*.py" = ["E501", "D"]
"src/maxo/routing/updates/*.py" = ["E501", "D"]
"src/maxo/dialogs/test_tools/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ["py312"]
include = 'src/.*\.py$|tests/.*\.py$|examples/.*\.py$'
